# JANUS

./: .gitignore  README.md  pyproject.toml
dashboard/: JANUS_dash.py
dashboard/lib/: charts.py  db.py  queries.py
dashboard/pages/: pipeline_health.py  product_analytics.py
data/raw/billing/: 2026-01-01.csv  2026-01-02.csv
data/raw/events/: 2026-01-01.jsonl  2026-01-02.jsonl
dbt/: .user.yml  profiles.yml
dbt/janus_dbt/: dbt_project.yml
dbt/janus_dbt/models/marts/: fct_billing_daily.sql  fct_events_daily.sql  fct_subscriptions_daily.sql  gold_churn_by_plan_daily.sql  gold_churn_labels_daily.sql  gold_user_features_daily.sql  schema.yml
dbt/janus_dbt/models/staging/: sources.yml  stg_billing.sql  stg_events.sql
dbt/janus_dbt/tests/: unique_fct_subscriptions_daily_grain.sql  unique_gold_churn_labels_daily_grain.sql  unique_gold_user_features_daily_grain.sql  valid_late_rate_7d.sql
docker/: docker-compose.yml
models/churn/: model_report_churn_baseline.md  train_baseline.py
notebooks/analytics/: churn_eda.ipynb  model_monitoring.ipynb
pipelines/generate/: generate_billing.py  generate_raw.py
pipelines/ingest/: bronze_idempotency.py  bronze_to_silver_billing.py  bronze_to_silver_events.py  create_bronze_tables.py  create_silver_billing_tables.py  create_silver_tables.py  load_billing_to_bronze.py  load_events_to_bronze.py
pipelines/utils/: db.py
src/janus/: db.py
src/janus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
