[project]
name = "janus"
version = "0.1.0"
description = "JANUS: Event-to-Insight SaaS Analytics Platform"
requires-python = ">=3.11"

dependencies = [
  "python-dateutil>=2.9",
  "pydantic>=2.6",

  "pandas>=2.2",
  "pyarrow>=15.0",
  "orjson>=3.9",

  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",

  "dbt-core>=1.7",
  "dbt-postgres>=1.7",
  "great-expectations>=0.18",

  "scikit-learn>=1.4",
  "shap>=0.44",

  "streamlit>=1.32",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]